css/screen.css
/*	------------------------
	Satellite

	Layout

	Design/layout by James Muspratt
	http://jamesmuspratt.com

	*/


/*	Reset ------------------ */

	html					{margin:0; padding:0;}
	body, body * 			{margin:0; padding:0; text-indent:0; text-decoration: none; outline:none;}
	body img				{border:0;}
	

/*	Utility Classes ------------------ */

	.clear 	 			{clear:both;}
	.cf:after			{content: " "; display: block; font-size: 0; clear: both; visibility: hidden;}
	
	
/*	Responsive Media ------------------ */
	
	img, video 			{max-width:100%;}
	

/*	Transitions ------------------ */

	a, .page-header, section.item	{
		-webkit-transition: 	all .3s ease;
		-moz-transition: 		all .3s ease;
		-o-transition:  		all .3s ease;
		transition: 			all .3s ease;
		}
	
	body.transition {
		-webkit-transition: 	background .75s ease;
		-moz-transition: 		background .75s ease;
		-o-transition:  		background .75s ease;
		transition: 			background .75s ease;
	}
	.sat-credit, .sat-logo, .sat-built-with		{
		-webkit-transition: 	all .3s ease;
		-moz-transition: 		all .3s ease;
		-o-transition:  		all .3s ease;
		transition: 			all .3s ease;
		}



	/*	Type ------------------ */

		body 			{font: 12px/15px 'Cutive Mono', courier, monospace; color:rgb(100,100,100);  background:#eee;}

	 	h1, h2, h3, h4, h5	{font-weight:normal; clear:both; margin:0 ;}
		h1							{font-size:13px; }
	 	h2 							{font-size:13px; color:#646464;}
	 	h3							{margin-bottom:0;}
		h4							{font-size:13px; line-height:15px; }
		h5							{font-size:12px; line-height:15px; margin-bottom:10px;}


		a						{color:#2d9af6;}
		a:hover 		{color:#aaa; }


/*	Layout ------------------ */
	
	body 	{padding:0 8%;}
	.main 	{position:relative;}
	
	
	header.primary, .main, footer	{max-width:1500px; margin:0 auto; position:relative; }
	header.primary					{padding:20px 0 .5px 0; margin-bottom:20px;}
	
/*	General ------------------ */

	.page-header 								{margin-bottom:20px;}
	.page-header h1 						{font-size:18px; line-height:24px; font-weight:normal;}
	.button											{font-size:12px; display:inline-block; color:#979797; padding:4px 8px;  position:relative;}
	.button											{background:rgba(0,0,0,.03);}


	/*	Header & Nav ------------------ */
	header.primary										{margin-bottom:35px;}
	
	header.primary h1, nav.primary		{display:inline-block; margin-right:20px; font-size:12px; }
	
	nav.primary												{float:left; width:87%;}
	
	
	nav.primary ul 										{list-style:none; display:inline-block; }
	nav.primary li 										{display:inline-block; margin:0 20px 0 0;}
	header.primary a													{color:#888;}
	
	header.primary h1.current a, 
	header.primary nav li.current a		{color:#000; padding-bottom:2px; border-bottom:2px solid rgba(0,0,0,.1);}
	
	nav a:hover, a.button:hover				{color:#333;}
	
	p.mode-trigger 										{float:right; width:10%; text-align:right; width:15px; height:15px;}
	p.mode-trigger a									{padding-left:0; padding-right:0; color:#888; display:block;}
	p.mode-trigger a:hover						{color:#555;}
	p.mode-trigger a:before						{content:"❑ ";}
	p.mode-trigger a.active:before		{content:"❒ ";}
	
	


/*	Home Page ------------------ */

	li.older 							{text-align:right;}
	li.newer span:before	{content: "← "; position:relative; top:1px;}
	li.older span:after		{content: " →"; position:relative; top:1px;}
	
	
/*	Home ------------------ */

	.thumbs 										{list-style:none;}
	.thumbs li 									{float:left; display:block; overflow:hidden; position:relative;}
	.thumbs li 									{width:48%;  margin-right:4%; margin-bottom:10px;}
	.thumbs li:nth-child(2n-1)	{clear:both;}
	.thumbs li:nth-child(2n) 		{margin-right:0;}
	
	.thumbs li img					{max-height:135px;}
	.thumbs li.video:after			{content: "video"; position:absolute; display:inline-block; padding:1px 5px; top:0; left:0; background:rgba(0,0,0,.5); color:#fff; font-size:10px; text-transform:uppercase;}
	
	.paging 					{margin:0; }
	.paging p					{float:left; width:35%;}
	.paging ul 				{list-style:none; float:right; width:55%; text-align:right;}
	.paging li 				{display:inline-block;}


/*	View Page (individual photo) ------------------ */
	
	.item																{margin-bottom:10px;}
	.photo-title-desc										{margin-bottom:10px; }
	h2.photo-title											{font-size:20px; line-height:20px; margin-bottom:10px;}
	p.photo-desc												{margin-bottom:10px;}
	.meta 															{padding-bottom:5px; border-top:1px dotted #ebebeb;}
	.meta section												{font-size:12px; padding:5px 0; border-bottom:1px dotted #eee;}
	.meta h3		 												{font-size:12px; float:left; width:35%; color:#b4b4b4; }
	.meta section ul, .meta section p		{float:right; width:65%; list-style:none;}
	.meta section li 										{margin-bottom:5px;}
	.meta section li:last-child					{margin-bottom:0;}
	
	nav.photo-prev-next								{margin:20px 0;}
	nav.photo-prev-next ul							{list-style:none;}
	nav.photo-prev-next li							{display:inline-block;  }
	nav.photo-prev-next li img 						{display:inline-block;  padding:5px 0 0 0;}
	nav.photo-prev-next li.prev 					{text-align:right;}
	nav.photo-prev-next li:first-child				{margin-right:2%;}
	nav.photo-prev-next li a.button					{display:block;}


	.title-desc													{margin-bottom:30px;}
	.photo-info 												{padding:15px 5% 0px 5%; background:#fff; box-shadow: 0 0 2px rgba(0,0,0,.1);}
	
	p.view-on-flickr										{margin:15px 0 10px 0; border:0;}
	
/*	Sets Page ------------------ */

	.thumbs.photosets li								{box-shadow: 0 0 2px rgba(0,0,0,.1); margin-bottom:20px; background:#fff;}
	.thumbs.photosets li img						{display:block;}
	.thumbs.photosets li a							{display:block;}
	.set-text 													{margin:0;  padding:10px 5%; }
	.thumbs.photosets li h4							{margin-bottom:3px;}
	.thumbs.photosets li h5							{color:#979797;font-weight:normal;}
	.thumbs.photosets li a:hover				{color:#aaa;}
	

/*	Tags Page  ------------------ */

	.tag-list 		{list-style:none; -moz-column-count:2; -webkit-column-count:2; column-count:2;}
	.tag-list li 	{font-size:15px; line-height:25px;}


/*	Footer ------------------ */

	footer {clear:both; margin-top:20px;}
	footer p {font-size:10px; color:#888;}

	/*	Credit/Logo */
	.sat-credit												{position:relative;  width:50px; position:relative;}
	.sat-logo													{position:relative; display:inline-block; color:#999; margin-left:-10px; width:15px; height:15px; padding:10px; border-radius:30px;  text-align:center; font-size:15px; }
	.sat-logo sup 										{position:absolute; right:0px; top:0px; }
	.sat-built-with										{left:0; width:200px; position:absolute; opacity:0; display:inline-block; padding:0 20px;}
	.sat-credit:hover	.sat-logo 			{background:rgba(0,0,0,.05); }
	.sat-credit:hover .sat-logo sup		{opacity:0;}
	.sat-credit:hover .sat-built-with {opacity:1; left:20px;}


/*	Viewing Mode------------------ */

	body.mode 																	{background:#222;}
	body.mode header.primary h1.current a,
	 body.mode header.primary nav li.current a	{color:#fff; border-color:rgba(255,255,255,.1);}
	 
 	body.mode header.primary h1.current a:hover,	
 	body.mode header.primary nav a:hover							{color:#eaeaea;}
	 
	
	body.mode section.item								{width:100%;}
	body.mode .photo-info									{display:none;}
	body.mode .thumbs.photosets	li				{height:145px; padding:0; background:none; box-shadow:none;}
	body.mode .thumbs.photosets li h4, 
	body.mode .thumbs.photosets li h5 		{display:none;}
	body.mode .set-text 									{background:none;}
	body.mode nav.photo-prev-next					{position:absolute; top:-30px; left:0; margin:0; padding-top:0; border:0;}
	body.mode nav.photo-prev-next img,  
		body.mode nav.photo-prev-next br 		{display:none;}
	body.mode nav.photo-prev-next li a.button 		{padding-top:2px; background:rgba(255,255,255,.03); }
	body.mode nav.photo-prev-next li a.button:hover	{background:rgba(255,255,255,.05); color:#fff;}
	body.mode .photo-title-desc, body.mode .page-header, 	body.mode .meta				{display:none;}




		/* --------------- Breakpoint 2:  --------------- */

			@media screen and (min-width: 750px) {
			body:after {content: "2"; display:none;} /* flag for javascript */
			body {padding:0 5%;}
			                    			
			.item		 									{float:left; width:68%;}
			aside.sidebar 						{float:right; width:28%;}
			.photo-info								{padding-left:7%; padding-right:7%;}
	
			nav.photo-prev-next li 							{max-width:46%;}
			nav.photo-prev-next li:first-child				{margin-right:5%;}
			
			.thumbs li 								{width:200px; height:140px; overflow:hidden; margin-right:10px; margin-bottom:10px;}
			.thumbs li:nth-child(2n-1)	{clear:none;}
			.thumbs li:nth-child(2n) 	{margin-right:10px;}
			
			.thumbs.photosets li	 	{height:200px; }
			
			.tag-list 		{-moz-column-count:3; -webkit-column-count:3; column-count:3;}
			
			body.mode nav.photo-prev-next	{left:auto; top:-53px; right:30px;}

			} /* 2 */
	
	
		/* ---------------  Breakpoint 3:  --------------- */
		@media screen and (min-width: 1000px) {
			
			body:after							{content: "3"; display:none;} /* flag for javascript */
			.item		 								{width:74%;}
			aside.sidebar 					{width:24%;}
			.tag-list 							{-moz-column-count:4; -webkit-column-count:4; column-count:4;}
			.set-desc							{width:50%;}
			
			} /* 3 */


		/* ---------------  Breakpoint 4  --------------- */
		@media screen and (min-width: 1300px) {
		
			body:after							{content: "4"; display:none;} /* flag for javascript */
			.item		 								{width:78%;}
			aside.sidebar 					{width:20%;}
			.tag-list 							{-moz-column-count:5; -webkit-column-count:5; column-count:5;}
			.set-desc						{width:30%;}

		
			} /* 4 */	
	

	
			/*	Retina ------------------ */


			@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 

				}  /* end retina */

		
		
			/*	Clean up ------------------ */
	
			@media screen and (max-device-width: 480px), screen and (max-width: 600px) {
	
				/* 	Fix iOS and Windows Mobile font-size changes */
				html {-ms-text-size-adjust: none;-webkit-text-size-adjust: none;}
		
			} /* clean up */

